# project

./: LICENSE.txt  README.md
Authentication/: accountCreation.py  login.py
ImageTagging/: tag_image.py
createUser/: main.py
doc/: imageHost-API-default-swagger.json  updated-diagram.drawio
getImage/: lambda_handler.py
image-host/: package-lock.json  package.json
image-host/public/: index.html
image-host/src/: App.js  index.css  index.js
image-host/src/components/: Home.css  Home.js  Login.js  NavBar.css  NavBar.js
image-tagger/: main.py
imageprocessing/: .gitignore  Cargo.toml  README.md
imageprocessing/src/: main.rs
imageprocessing/test/: event.json
jwt-verifier/: index.js  package.json
login-handler/: index.js  package-lock.json  package.json
uploadImage/: lambda_handler.py
